<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#8d938b"
    android:weightSum="3">
    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight_sum_1"
        android:layout_gravity="center"
        android:background="#779980"
        android:gravity="center"
        android:layout_weight="1"
        />
    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight_sum_2"
        android:layout_gravity="center"
        android:background="#5993ff"
        android:gravity="center"
        android:layout_weight="1"
        />
    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight_sum_3"
        android:layout_gravity="center"
        android:background="#ff4d00"
        android:gravity="center"
        android:layout_weight="1"
        />
</LinearLayout>